[B]Version 0.2.6[/B]
- Added video Res & aduio channel images
- Settings cleanup

[B]Version 0.2.5[/B]
- Localize images

[B]Version 0.2.4[/B]
- Added option to password protect webpage.

[B]Version 0.2.3[/B]
- Added Progress dialog.

[B]Version 0.2.2[/B]
- Added option to change ftp directory structure.

[B]Version 0.2.1[/B]
- Added option to change list sort order.

[B]Version 0.2.0[/B]
- Added file FTP upload.

[B]Version 0.1.0[/B]
- Added runtime.
- Added Video Res.
- Added MPAA.
- Added Search box.
- Code cleanup.
- HTML updates.
- Added Screenshot.

[B]Version 0.0.1[/B]
- initial beta.