@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="script.html.library-report" name="HTML Library Report" version="0.2.6" provider-name="steveb">
+<addon id="script.html.library-report" name="HTML Library Report" version="0.2.7" provider-name="steveb">
 	<requires>
-		<import addon="xbmc.python" version="2.1.0"/>
+		<import addon="xbmc.python" version="2.14.0"/>
 	</requires>
 	<extension point="xbmc.python.script" library="default.py"/>
 	<extension point="xbmc.addon.metadata">
