@@ -3,7 +3,7 @@
 	<category label="30000">
 		<setting id="save_location" type="folder" source="files" label="30001" default=""/>
 		<setting type="sep" />
-		<setting id="listtype" type="enum" label="List Type" values="Basic|Table" default="0"/>
+		<setting id="listtype" type="enum" label="30009" lvalues="30016|30018" default="0"/>
 		<setting type="sep" />
 		<setting id="includemovies" type="bool" label="30002" default="true" enable="Library.HasContent(movies)"/>
 		<setting id="movieplot" type="bool" label="30010" subsetting="true" enable="eq(-1,true)" visible="Library.HasContent(movies)" default="false"/>
